--- a/static/css/dispatch/order.css
+++ b/static/css/dispatch/order.css
@@ -893,8 +893,16 @@
 }
 
 .accountCloseBtn,
-.waypointCloseBtn {
+.waypointCloseBtn,
+.waypointDeleteBtn {
   background-color: #444;
+}
+
+.stationPopupFooter {
+  justify-content: space-between;
+}
+.popupFooterRightBox {
+  display: flex;
 }
 
 .loadAccountBtn {
@@ -1077,4 +1085,54 @@
 
 .waypointBox {
   display: flex;
+}
+
+
+.popupBodyReservation{
+  height: calc(100% - 3.6rem);
+}
+
+.popupContainerReservation{
+  height: 57rem;
+}
+
+.categoriFlex{
+  display: flex;
+  justify-content: space-between;
+}
+
+.reservationTable td:nth-child(1){width: 5%;}
+.reservationTable td:nth-child(2){width: 15%;}
+.reservationTable td:nth-child(3){width: 20%;}
+.reservationTable td:nth-child(4){width: 10%;}
+.reservationTable td:nth-child(5){width: 15%;}
+.reservationTable td:nth-child(6){
+  width: 25%;
+}
+.reservationTable td:nth-child(7){width: 10%;}
+
+.delete{
+  background-color: #444;
+  margin-right: auto;
+}
+
+.save{
+  background-color: #0069D9;
+  margin-right: 2rem;
+}
+
+.close{
+  background-color: #444;
+}
+
+.selectType{
+  border: none;
+}
+
+.datetimeLocal{
+  height: 3rem;
+}
+
+.orderListSubContentsbBlue{
+  color: blue;
 }
