--- a/approval/templates/approval/approval.html
+++ b/approval/templates/approval/approval.html
@@ -79,9 +79,12 @@
                     </td>
                     <td class="tbodyTrTd td blue">
                         <div class="fileDownload">
+                            {% with file_name=file_name_list|index:forloop.counter0 %}
                             {% for file in file_list|index:forloop.counter0 %}
-                            {{file}}
+                                <a href="{{file}}">{{file_name|index:forloop.counter0}}</a><br>
+                                
                             {% endfor %}
+                            {% endwith %}
                         </div>
                     </td>
                     <td class="tbodyTrTd td">{{approval.date}}</td>
@@ -140,235 +143,8 @@
         </div>
     </form>
 
-    <div class="writeContent" id="writeContent">
-        <div class="contentBox boxSize">
-            <div class="contentBoxArticle flex">
-                <label class="contentBoxArticleLabel">제목</label>
-                <input type="text" class="contentBoxArticleInput">
-            </div>
-
-            <div class="contentBoxArticle flex">
-                <label class="contentBoxArticleLabel">분류</label>
-                <select class="contentBoxArticleSelect" name="approvalClassfication">
-                    <option value="지출결의서">지출결의서</option>
-                    <option value="휴가계">휴가계</option>
-                    <option value="사고처리">사고처리</option>
-                </select>
-
-                <label class="contentBoxArticleLabel contentBoxArticleLabelLabel">결재자</label>
-                <select class="contentBoxArticleSelect" name="approvalPerson">
-                    <option value="고영이">고영이</option>
-                    <option value="이세명">이세명</option>
-                    <option value="김인숙">김인숙</option>
-                    <option value="김형주">김형주</option>
-                    <option value="엄성환">엄성환</option>
-                    <option value="김성태">김성태</option>
-                </select>
-            </div>
-            
-            <div class="contentBoxArticle contentBoxArticleLong flex">
-                <label class="contentBoxArticleLabel">첨부파일</label>
-                <div class="contentBoxArticleFileArea">
-                    <input type="file" id="fileInput" name="fileInput">
-                </div>
-            </div>
-
-            <div class="contentBoxArticle contentBoxArticleLast">
-                <input type="text" class="contentBoxArticleText"> 
-            </div>
-
-        </div>
-
-        <div class="createDelete flex">
-            <input type="button" class="createBtn Btn" value="등록">
-            <input type="button" class="deleteBtn Btn" value="닫기" onclick="writeClose()">
-        </div>
-
-    </div>
-
-    <div id="waitContent" class="waitContent boxSize">
-
-        <div class="contentBox boxSize">
-            <div class="contentBoxContent flex">
-                <div class="contentBoxContentContent">
-                    <div class="contentBoxArticle flex">
-                        <label class="contentBoxArticleLabel">제목</label>
-                        <input type="text" class="contentBoxArticleInput approvalContentBoxArticleInput">
-                    </div>
-
-                    <div class="contentBoxArticle flex">
-                        <label class="contentBoxArticleLabel">분류</label>
-                        <select class="contentBoxArticleSelect" name="approvalClassfication">
-                            <option value="지출결의서">지출결의서</option>
-                            <option value="휴가계">휴가계</option>
-                            <option value="사고처리">사고처리</option>
-                        </select>
-
-                        <label class="contentBoxArticleLabel contentBoxArticleLabelLabel">결재자</label>
-                        <select class="contentBoxArticleSelect" name="approvalPerson">
-                            <option value="고영이">고영이</option>
-                            <option value="이세명">이세명</option>
-                            <option value="김인숙">김인숙</option>
-                            <option value="김형주">김형주</option>
-                            <option value="엄성환">엄성환</option>
-                            <option value="김성태">김성태</option>
-                        </select>
-
-                    </div>
-                    
-                    <div class="contentBoxArticle contentBoxArticleLong flex">
-                        <label class="contentBoxArticleLabel">첨부파일</label>
-                        <div class="contentBoxArticleFileArea">
-                            <input type="file" id="fileInput" name="fileInput">
-                        </div>
-                    </div>
-                </div>
-
-                <div class="contentBoxExamine">
-                    <div class="contentBoxExamineArticle flex">
-                        <label class="contentBoxExamineArticleTitle">등록일</label>
-                        <label class="contentBoxExamineArticleContent">2024-08-02</label>
-                    </div>
-
-                    <div class="contentBoxExamineArticle flex">
-                        <label class="contentBoxExamineArticleTitle">재가여부</label>
-                        <label class="contentBoxExamineArticleContent">대기1</label>
-                    </div>
-
-                    <div class="contentBoxExamineArticle flex">
-                        <label class="contentBoxExamineArticleTitle">결재일</label>
-                        <label class="contentBoxExamineArticleContent">2024-08-05</label>
-                    </div>
-                </div>
-
-            </div>
-            
-
-            <div class="contentBoxArticle contentBoxArticleLast">
-                <input type="text" class="contentBoxArticleText"> 
-            </div>
-
-        </div>
-
-        <div class="createDelete flex">
-            <input type="button" class="createBtn Btn" value="수정">
-            <input type="button" class="deleteBtn Btn" value="닫기" onclick="waitContentClose()">
-        </div>
-
-    </div>
-
-    <div id="rejectedAndApproveContent" class="rejectedAndApproveContent boxSize">
-
-        <div class="contentBox boxSize">
-            <div class="contentBoxContent flex">
-                <div class="contentBoxContentContent">
-                    <div class="contentBoxArticle flex">
-                        <label class="contentBoxArticleLabel">제목</label>
-                        <input type="text" class="contentBoxArticleInput">
-                    </div>
-
-                    <div class="contentBoxArticle flex">
-                        <label class="contentBoxArticleLabel">분류</label>
-                        <select class="contentBoxArticleSelect" name="approvalClassfication">
-                            <option value="지출결의서">지출결의서</option>
-                            <option value="휴가계">휴가계</option>
-                            <option value="사고처리">사고처리</option>
-                        </select>
-
-                        <label class="contentBoxArticleLabel contentBoxArticleLabelLabel">결재자</label>
-                        <select class="contentBoxArticleSelect" name="approvalPerson">
-                            <option value="고영이">고영이</option>
-                            <option value="이세명">이세명</option>
-                            <option value="김인숙">김인숙</option>
-                            <option value="김형주">김형주</option>
-                            <option value="엄성환">엄성환</option>
-                            <option value="김성태">김성태</option>
-                        </select>
-
-                    </div>
-                    
-                    <div class="contentBoxArticle contentBoxArticleLong flex">
-                        <label class="contentBoxArticleLabel">첨부파일</label>
-                        <div class="contentBoxArticleFileArea">
-                            <input type="file" id="fileInput" name="fileInput">
-                        </div>
-                    </div>
-                    
-                </div>
-
-                <div class="contentBoxExamine">
-                    <div class="contentBoxExamineArticle flex">
-                        <label class="contentBoxExamineArticleTitle">등록일</label>
-                        <label class="contentBoxExamineArticleContent">2024-08-02</label>
-                    </div>
-
-                    <div class="contentBoxExamineArticle flex">
-                        <label class="contentBoxExamineArticleTitle">재가여부</label>
-                        <label class="contentBoxExamineArticleContent">승인 or 반려</label>
-                    </div>
-
-                    <div class="contentBoxExamineArticle flex">
-                        <label class="contentBoxExamineArticleTitle">결재일</label>
-                        <label class="contentBoxExamineArticleContent">2024-08-05</label>
-                    </div>
-                </div>
-                
-            </div>
-
-            <div class="contentBoxArticle contentBoxArticleNayoung flex">
-                <label class="contentBoxArticleLabel contentInputLabel">내용</label>
-                <input type="text" class="contentBoxArticleInput contentInput">
-            </div>
-
-            <div class="approverSpeak">
-                
-                    <div class="approverSpeakTrTd flex">
-                        <label class="approverSpeakPerson">김인숙</label>
-                        <input class="approverSpeakContent">
-                    </div>
-                
-
-                
-                    <div class="approverSpeakTrTd flex">
-                        <label class="approverSpeakPerson">고영이</label>
-                        <input class="approverSpeakContent">
-                    </div>
-                
-
-                
-                    <div class="approverSpeakTrTd flex">
-                        <label class="approverSpeakPerson">김형주</label>
-                        <input class="approverSpeakContent">
-                    </div>
-                
-                    
-            </div>
-
-        </div>
-
-
-        <div class="createDelete flex">
-            <input type="button" class="deleteBtn Btn" value="닫기" onclick="rejectedAndApproveContentClose()">
-        </div>
-
-    </div>
-
-
-
-    
 {% endblock %}
 
 {% block script %}
-<script>
-    download = document.querySelectorAll(".fileDownload")
-    console.log(download.parrent)
 
-    Array.from(download).forEach(item => {
-        item.addEventListener("click", () => {  
-            window.open(`file/${item.parentElement.parentElement.className}`, "test", "width=630, height=891")
-        })
-    })
-    
-    
-</script>
 {% endblock %}
