--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,6 +1,7 @@
 * {
   list-style: none;
   text-decoration: none;
+
 }
 
 html {
@@ -70,6 +71,21 @@ textarea {
   width: 22rem;
   height: 100vh;
   background-color: #1C1A4E;
+}
+
+::-webkit-scrollbar {
+    width: 2px;
+}
+
+/* 스크롤바 트랙 */
+::-webkit-scrollbar-track {
+    background: transparent; 
+}
+
+/* 스크롤바 핸들 */
+::-webkit-scrollbar-thumb {
+    background: rgba(0, 0, 0, 0.3);
+    border-radius: 4px;
 }
 
 
@@ -170,29 +186,63 @@ textarea {
   height: auto;
 }
 
-.sideMenuNav2 a {
-  width: 100%;
-}
-
 .sideMenuNav2Link {
   display: flex;
   align-items: center;
-  width: calc(100% - 3rem);
   height: 4.2rem;
   font-size: 1.6rem;
   color: white;
 }
 
-.sideMenuNav2Link:hover .sideMenuNav2Menu {
+.sideMenuNav2Box{
+  width: calc(100% + 2rem);
+}
+
+.sideMenuNav2Menu:hover .sideMenuNav2Link {
   text-decoration: underline;
   text-underline-position: under;
 }
 
+.submenu {
+  display: none;
+  position: fixed;
+  background-color: #333;
+  opacity : 0.9;
+  padding: 0;
+  margin-top: -4rem;
+  margin-left: 16rem;
+  width: 16rem;
+  text-align: center;
+}
+
+.sideMenuNav2Menu:hover .submenu,
+.submenu:hover .submenu {
+  display: block; /* 부모 항목에 마우스를 올리면 하위 메뉴가 나타나도록 설정 */
+}
+
+.sideMenuNav3Menu {
+  cursor: pointer;
+  padding: 10px;    
+  background-color: rgb(25, 23, 59);
+  color: white;
+  font-size: 1.6rem;
+}
+
+.sideMenuNav3Menu:hover {
+  background-color: rgb(50, 50, 90); /* hover 시 배경색 변경 */
+}
+
+.sideMenuNav3Link {
+  text-decoration: none;
+  color: inherit;
+  display: block;
+  padding: 0;
+  height: 4.2rem;
+}
 
 /* Manual */
 .manualArea {
   position: absolute;
-  bottom: 0;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -201,6 +251,7 @@ textarea {
   height: 9.2rem;
   padding: 1rem 0;
   box-sizing: border-box;
+  bottom: 1%;
 }
 
 .manualArea a {
@@ -1194,4 +1245,8 @@ textarea {
   html {
     font-size: 46.8%;
   }
+}
+
+.weeklyStatus {
+  left: 0;
 }
