--- a/static/css/newVehicle/list.css
+++ b/static/css/newVehicle/list.css
@@ -194,7 +194,7 @@ td:nth-child(9) {
 }
 
 .albleRadioBox{
-    width: calc(100% - 9rem);
+    width: calc(100% - 14rem);
 }
 
 .albleRadioBox label{
@@ -204,15 +204,8 @@ td:nth-child(9) {
 }
 
 
-.popupSection{
-    padding: 5rem;
-    padding-bottom: 0;
-}
-
 .popupBody{
-    height: 60vh; 
-    overflow-y: scroll; 
-    padding: 3rem; 
+
     box-sizing: border-box; 
 }
 
@@ -224,9 +217,6 @@ td:nth-child(9) {
     padding-right: 2rem;
 }
 
-.popupSection{
-    padding: 3rem 0;
-}
 
 .vehicleInformationTitle{
     padding-bottom: 1rem;
@@ -240,4 +230,22 @@ td:nth-child(9) {
 
 .informationSection:nth-child(2), .informationSection:nth-child(3){
     margin-top: 2rem;
+}
+
+/* .documentPopup{
+    display: block;
+} */
+
+.popupArticleinputShort {
+    width: 11rem !important;
+}
+
+.inputMonth{width: 15rem;}
+
+.maintenanceSearchForm{
+    margin-top: 2rem;
+}
+
+.detailRoutePopupScrollBoxTbody tr td:last-child{
+    border-right: 0.1rem solid #D4D4D4;
 }
