feat: 사이드메뉴 빼먹었던 급여관리2 추가

--- a/templates/base.html
+++ b/templates/base.html
@@ -538,6 +538,11 @@
                       </a>
                     </li>
                     <li>
+                      <a href="{% url 'HR:salary_new' %}" class="sideMenuNav3Link">
+                        <div class="sideMenuNav3Menu">급여관리2</div>
+                      </a>
+                    </li>
+                    <li>
                       <a href="{% url 'HR:salary' %}" class="sideMenuNav3Link">
                         <div class="sideMenuNav3Menu">급여관리(현재)</div>
                       </a>
